--- a/style.css
+++ b/style.css
@@ -14,17 +14,19 @@ body, html {
     padding: 15px 20px;
 }
 
-
+/*
 .main {
     height: 100%;
 }
+*/
 
 .section{
     background-color: #0097d3;
     height: 100%;
 }
 
-.article, .aside {
+/*.article, .aside { */
+.vcenter{
     position: relative;
     top: 50%;
     transform: translateY(-50%);
@@ -32,6 +34,7 @@ body, html {
 
 .section-paragraph {
     font-size: 1em;
+    margin: 25px;
 }
 
 .footer{
@@ -39,3 +42,20 @@ body, html {
     padding: 15px;
 }
 
+/* moved to MQs 
+.column {
+    float: left;
+}
+*/
+
+@media (min-width: 768px) { /*mf*/
+    .column {
+        float: left;
+    }
+    .column-60{
+        width: 60%;
+    }
+    .column-40{
+        width: 40%;
+    }
+}
